tests/expectations/parser/program/mapping_fail.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370005]: expected 'const', 'struct', 'record', 'mapping', '@', 'async', 'function', 'transition', 'inline', '}' -- found 'mappin'
    --> test:4:5
     |
   4 |     mappin balances: address => u128;
     |     ^^^^^^"""]
